# blender-mcp

./: .gitignore  .mcp.json  404.php  ARCHITECTURE.md  BMA_PATCHES.md  CHANGELOG.md  CHATGPT_AGENT_SETUP.md  CURSOR_SETUP.md  Dockerfile  Editor _ Mermaid Chart-2025-05-01-161004_BlenderMCP OpenAI Adapter Architecture.mmd  OPENAI_SETUP.md  README 2.md  README.md  REMOTE_SETUP.md  addon.py  addon_utils.py  archive.php  claude_desktop_config.json  config.example.json  footer.php  front-page.php  header.php  index.php  mcp.example.json  openai_adapter.py  optimized pyproject.toml  page.php  pyproject.toml  search.php  setup.py  single.php  skeleton_binding_script.py  smithery.yaml  style.css  test_codex_compatibility.py  test_server_state_storage.py  test_set_texture_version_guard.py  theme.json  tox.ini
.codex-plugin/: plugin.json
.codex/skills/blender-cli/: SKILL.md
.cursor/: mcp.json
.github/workflows/: ci.yml  python-package.yml
Bible/: .claudeignore  .mcp.json  CLAUDE.md  KB_SERVER.md  SYSTEM_PROMPT.md
Bible/Bambu Wiki documentation/: INDEX.md  INDEX.yaml
Bible/Bambu Wiki documentation/Printer Infos/: a1_maintenance_relevant.md  a1_screen_workflow.md  a1_specs.md  build_plates.md  calibration.md
Bible/Bambu Wiki documentation/docs/: a1_field_kit.md  advanced_slicing_params.md  assembly_design.md  bambu_3mf_export.md  bambu_studio_settings.md  bambu_studio_workflow.md  design_rules_fdm.md  faq_glossary.md  filament_materials.md  gcode_inspection_basics.md  hidden_bambu_studio_settings.md  mvs_filament_table.md  pla_post_processing_field_data.md  post_processing.md  print_quality_issues.md  slicing_profiles.md  text_and_engravings.md  threads_and_fasteners.md  (+2 more)
Bible/Blender for 3d print documentation/: FIELD_NOTES.md  INDEX.md  INDEX.yaml  routing_rules.yaml
Bible/eval/: README.md  eval_cases.yaml
Bible/playbooks/: README.md  decimate_to_target.json  post_decimate_cleanup.json  quadriflow_preserve_edges.json  recalc_normals.json  repair_aggressive.json  repair_basic.json
Bible/scripts/: eval_dry.py  validate_kb.py
Bible/sessions/: README.md
Bible/templates/: README.md  session_kickoff.jsonc  session_kickoff.md  session_log_example.yaml
Workflow/: INITIAL_PROMPT.md  PROJECT_SETUP.md  TESTING_LOG.md
assets/js/: customizer.js
blender_mcp_openai/: __init__.py  adapter.py  backward_compat.py  cli.py  config.py  context.py  dispatch.py  logging_utils.py  schema.py  streaming.py
blender_mcp_openai/tests/: __init__.py  test_adapter.py  test_schema.py
examples/: cursor_integration_example.py
examples/hunyuan3d_gradio/: 01_test_lambda.py  02_test_shape_generation.py  03_test_generation_all.py  04_test_modes.py  05_test_export_click.py  README.md  api_common.py  run_all.py
examples/screenshot_clean/: screenshot_clean.py
headless/: headless_socket_mode.py  start_blender_mcp_headless.py  start_headless_blocking.py
inc/: accessibility.php  custom-post-types.php  customizer-options.php  enqueue-assets.php  gutenberg-support.php  seo.php  taxonomies.php  template-tags.php  theme-setup.php
llm_handler/: __init___.py  base.py  claude.py  ollama.py
parts/: content-excerpt.php  content-none.php  content-page.php  content-single.php
prompts/: image_optimizer_for_3d_ai.md
skills/blender-mcp/: SKILL.md
src/blender_kb/: __init__.py  kb.py  routing.py  server.py
src/blender_mcp/: __init__.py  blender_connection.py  bma_env.py  cli.py  cursor_integration.py  geometry_nodes.py  server.py  telemetry.py  telemetry_decorator.py  tool_profiles.py
tests/: __init__.py  manual_test_sketchfab.py  test_blender_mcp_server.py  test_cursor_integration.py  test_sketchfab_preview.py  test_tool_profiles.py
(+64 files in other folders)
