[project]
name = "blender-mcp"
version = "1.5.5"
description = "Blender integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
]

# BMA_PATCH: asset-integration deps are optional — server runs in benchmark
# mode without them. Install the 'telemetry' extra to enable usage reporting.
[project.optional-dependencies]
telemetry = [
    "supabase>=2.0.0",
    "tomli>=2.0.0",
]
full = [
    "blender-mcp[telemetry]",
]

[project.scripts]
blender-mcp = "blender_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
"Homepage" = "https://github.com/yourusername/blender-mcp"
"Bug Tracker" = "https://github.com/yourusername/blender-mcp/issues"

# BMA_PATCH: pytest configuration — run without -m mcp to skip real-server tests.
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "mcp: tests requiring a running MCP server / Blender with blender-mcp addon",
]
