[project]
name = "blender-mcp"
version = "1.6.0"
description = "Blender integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "tomli>=2.0.0",
]

[project.optional-dependencies]
# `supabase` is the network transport for the (anonymous, opt-out) telemetry
# module; it is NOT required to run the server. telemetry.py guards the import
# behind `HAS_SUPABASE` and no-ops without it. Keeping it out of the default
# install drops the heaviest transitive chain, so the default `uvx blender-mcp`
# resolves a smaller dependency set that installs from prebuilt wheels on
# supported interpreters. Add the transport with:
#   uvx --from "blender-mcp[telemetry]" blender-mcp
telemetry = [
    "supabase>=2.0.0",
]

[project.scripts]
blender-mcp = "blender_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
"Homepage" = "https://github.com/yourusername/blender-mcp"
"Bug Tracker" = "https://github.com/yourusername/blender-mcp/issues"
